--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,182 @@
-.container {
-  padding: 0 2rem;
+.hero {
+    width: 100%;
+    background: url("/department_logo.png") center center no-repeat;
+    background-size:contain;
+    position: relative;
+}
+.hero i {
+    position: absolute;
+    left: 50%;
+    bottom: 20px;
+    color: white;
+    font-size: 30px;
+    transform: translate(-50%, -50%);
+    animation: upDown 2s ease-in-out infinite;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+@keyframes upDown {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-50px);
+    }
+    100% {
+        transform: translateY(0);
+    }
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+.overlayer {
+    width: 100%;
+    padding: 125px 0;
+    background-color: rgba(0, 75, 106, 0.75);
+    display: flex;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.matlabLogo {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.mainContent {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    direction: rtl;
+    padding-right: 50px;
+    justify-content: center;
+    color: white;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.mainContent h4 {
+    width: 70%;
+    font-weight: normal;
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+.mainContent h5 {
+    font-weight: normal;
+}
+.mainContent button {
+    width: 120px;
+}
+
+@media only screen and (max-width: 700px) {
+    .matlabLogo {
+        display: none;
+    }
+    
+    .mainContent {
+        width: 100%;
+        padding: 20px;
+        text-align: center;
+    }
+
+    .mainContent h4 {
+        margin: 25px auto;
+    }
+    .mainContent button {
+        margin: 0 auto;
+    }
+}
+
+
+
+/* =============================================== */
+
+.mainContainer {
+    width: 95%;
+    margin: 50px auto;
 }
 
 .title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+    width: max-content;
+    margin: 40px auto;
+    padding: 10px;
+    border-bottom: 2px solid black;
 }
 
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+.cardContainer {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    direction: rtl;
 }
 
 .card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+    width: 635px;
+    border: 2px solid #acacac;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    direction: rtl;
+    margin-bottom: 20px;
+    margin-left: 5px;
 }
-
 .card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.card:focus {
+    border: 2px solid black;
+}
+@media only screen and (max-width: 1100px) {
+    .cardContainer {
+        justify-content: center;
+    }
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.cardImg {
+    width: 175px;
+    height: 175px;
+    background: url("/lecture.jpg");
+
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.cardContent {
+    width: 70%;
+    min-width: 175px;
+    direction: rtl;
+    padding-right: 20px;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.cardContent p {
+    margin: 15px 0;
 }
 
-@media (max-width: 600px) {
-  .grid {
+.cardContent button {
+    font-size: 1rem;
+    padding: 5px 10px;
+}
+
+.cardOverlay {
     width: 100%;
-    flex-direction: column;
-  }
+    height: 100%;
+    background: rgba(0, 31, 45, 0.75);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+@media only screen and (max-width: 700px) {
+
+    .cardImg {
+        width: 100px;
+        height: 100px;
+    }
+}
+
+@media only screen and (max-width: 410px) {
+    .cardContainer {
+        width: 70%;
+        margin: 0 auto;
+    }
+    .cardContent {
+        padding-right: 0;
+        text-align: center;
+        margin-top: 20px;
+    }
 }
