--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,195 @@
-html,
-body {
-  padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap');
+
+*, *::after, *::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
+  padding: 0;
   box-sizing: border-box;
 }
+
+:root {
+  --primary-color: #004765;
+  --secondary-color: #FF5C00;
+  --secondary-darkColor: #b44302;
+  --headingText-color: #0076A8;
+  --accent-color: #004B6A;
+  --accent2-color: #001F2D;
+  --font-family: "Almarai";
+  font-size: 16px;
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Almarai";
+  max-width: 2000px;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 840px) {
+  :root {
+    font-size: 12px;
+  }
+}
+@media only screen and (max-width:420px) {
+  :root {
+    font-size: 10px;
+  }
+}
+
+
+h1 { font-size: 3.3rem; line-height: 140%; }
+h2 { font-size: 2.441rem; line-height: 140%; }
+h3 { font-size: 1.953rem; line-height: 140%; }
+h4 { font-size: 1.563rem; line-height: 140%; }
+h5 { font-size: 1.25rem; line-height: 140%; }
+p { font-size: 1rem; line-height: 140%; }
+label { font-size: 1rem; line-height: 140%; }
+i {font-size: 1.25rem;}
+
+ul {
+  list-style: none;
+}
+
+
+a {
+  text-decoration: none;
+}
+a:hover,
+a:focus {
+  text-decoration: underline;
+}
+
+button {
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 14px 0;
+  cursor: pointer;
+  border: none;
+  color: white;
+  font-family: var(--font-family);
+  background-color: var(--secondary-color);
+}
+@media only screen and (max-width: 840px) {
+}
+button:hover,
+button:focus {
+  background-color: var(--secondary-darkColor);
+}
+
+.navigationActive {
+  font-weight: bold;
+  transform: scale(1.05);
+  border-bottom: 2px solid white;
+}
+
+
+footer {
+  width: 100%;
+  height: 50px;
+  background-color: var(--primary-color);
+}
+
+.upButton {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  padding: 15px 18px;
+}
+
+.backButton {
+  position: absolute;
+  left: 40px;
+  top: 100px;
+  padding: 10px 13px;
+}
+.upButton i {
+  font-size: 1.5rem;
+}
+
+/* Ham animation */
+.ham_Container {
+  width: 36.5px;
+  height: 34px;
+  position: relative;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  cursor: pointer;
+}
+@media only screen and (max-width: 650px) {
+  .ham_Container {
+    display: flex;
+  }
+}
+
+.circle {
+  width: 36.5px;
+  height: 34px;
+  border-radius: 50%;
+  border: 2px solid white;
+  position: absolute;
+  z-index: 1;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.hide {
+  position: absolute;
+  z-index: 2;    
+  width: 55px;
+  height: 34px;
+  background: var(--primary-color);
+  transition: all 0.5s ease-in-out;
+}
+
+.ham_4 {
+  width: 26px;
+  height: 17px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  z-index: 3;
+}
+
+.middleBar {
+  width: 100%;
+  height: 3.7px;
+  position: relative;
+  background: white;
+  transition: all 0.5s ease-in-out;
+}
+
+.middleBar::before, .middleBar::after {
+  content: "";
+  width: 100%;
+  height: 3.7px;
+  left: 0;
+  top: 0;
+  position: absolute;
+  background-color: white;
+  transition: all 0.5s ease-in-out;
+}
+.middleBar::before {
+  transform: translateY(-7px);
+}
+.middleBar::after {
+  transform: translateY(7px);
+}
+
+/* start animation classes */
+.ham_Container.back .middleBar {
+  transform: translateX(-30.2px);
+}
+
+.ham_Container.setRotate .middleBar::before {
+  transform: rotate(45deg) translate(21px, -21px);    
+}
+
+.ham_Container.setRotate .middleBar::after {
+  transform: rotate(-45deg) translate(21px, 21px);    
+}
+
+.ham_Container.moveHide .hide {
+  transform: translateX(56px);
+} 
