--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -59,6 +59,9 @@
 .mainContent h5 {
     font-weight: normal;
 }
+.mainContent a {
+    width: max-content;
+}
 .mainContent button {
     width: 120px;
 }
@@ -77,7 +80,7 @@
     .mainContent h4 {
         margin: 25px auto;
     }
-    .mainContent button {
+    .mainContent a {
         margin: 0 auto;
     }
 }
@@ -108,7 +111,7 @@
 
 .card {
     width: 635px;
-    border: 2px solid #acacac;
+    border: 2px solid #d1d1d1;
     padding: 20px;
     display: flex;
     flex-wrap: wrap;
