--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,19 +10,18 @@
     bottom: 20px;
     color: white;
     font-size: 30px;
-    transform: translate(-50%, -50%);
     animation: upDown 2s ease-in-out infinite;
 }
 
 @keyframes upDown {
     0% {
-        transform: translateY(0);
+        transform: translate(-50%, 0);
     }
     50% {
-        transform: translateY(-50px);
+        transform: translate(-50%, -50px);
     }
     100% {
-        transform: translateY(0);
+        transform: translate(-50%, 0);
     }
 }
 
@@ -67,6 +66,9 @@
 }
 
 @media only screen and (max-width: 700px) {
+    .overlayer {
+        padding: 100px 0px;
+    }
     .matlabLogo {
         display: none;
     }
@@ -111,7 +113,7 @@
 
 .card {
     width: 635px;
-    border: 2px solid #d1d1d1;
+    border: 2px solid #acacac;
     padding: 20px;
     display: flex;
     flex-wrap: wrap;
