--- a/styles/Lecture.module.css
+++ b/styles/Lecture.module.css
@@ -13,16 +13,20 @@
     width: 60%;
     min-width: 350px;
     text-align: center;
+    margin: 0 auto;
+    background-color: white;
 }
 
 .container object h5 {
-    color: white;
-    margin-top: 50px;
+    color: black;
+    margin-top: 25px;
+    padding: 0 20px;
 }
 
-.container object a {
+.container a {
     color: var(--secondary-color);
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+    text-decoration: underline;
 }
 
 @media only screen and (max-width: 1100px) {
