--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,6 +100,13 @@ footer {
   font-size: 1.5rem;
 }
 
+.downloadBtn {
+  position: fixed;
+  left: 20px;
+  bottom: 20px;
+  padding: 15px 18px;
+}
+
 /* Ham animation */
 .ham_Container {
   width: 36.5px;
