--- a/styles/Lecture.module.css
+++ b/styles/Lecture.module.css
@@ -7,13 +7,13 @@
     flex-wrap: wrap;
     background-color: var(--accent2-color);
     padding-top: 64px;
+    padding-left: 20px;
 }
 
 .container object {
     width: 60%;
     min-width: 350px;
     text-align: center;
-    margin: 0 auto;
     background-color: white;
 }
 
@@ -31,9 +31,10 @@
 
 @media only screen and (max-width: 1100px) {
     .container {
+        padding-left: 0px;
         height: auto;
     }    
     .container object {
-        margin-top: 20px;
+        margin: 20px auto;
     }
 }
