--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -136,7 +136,7 @@
 .cardImg {
     width: 175px;
     height: 175px;
-    background: url("/lecture.jpg");
+    background: url("/lecture.png");
 
 }
 
